# serpapi-search-rust

./: Cargo.toml  LICENSE  README.md  Rakefile  SECURITY.md
.github/workflows/: ci.yml
examples/: google_search_example.rs
src/: lib.rs  main.rs  serp_api_search.rs
tests/: serp_api_search-test.rs
