[package]
name = "serpapi-search-rust"
version = "0.1.1"
edition = "2021"
description = "Get Google, Bing, Baidu, Ebay, Yahoo, Yandex, Home depot, Naver, Apple, youtube Ssearch Results via SerpApi.com"
readme = "README.md"
homepage = "https://serpapi.com"
documentation = "https://serpapi.com/search-api"
repository = "https://github.com/serpapi/serpapi-search-rust"
license = "MIT"
authors = ["Victor Benarbia <victor@serpapi.com>"]
keywords = ["serp", "google", "search", "engine", "scrape"]
categories = ["network-programming", "parsing", "web-programming::http-client", "api-bindings"]

include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# json parser
# serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Asynchronous runtime
tokio = { version = "1", features = ["full"] }
# HTTP client
reqwest = "0.11.7"
